2010-11-29  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-request-move-article): Bail out if original group
	doesn't support article moves.
	(nnir-get-active): Improve active list retrieval.

2010-11-29  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-find-fill-point): Don't break before apostrophes.

2010-11-29  Binjo  <binjo.cn@gmail.com>  (tiny change)

	* nnimap.el (nnimap-open-connection-1): w32 open-network-stream doesn't
	seem to accept strings-with-numbers as port numbers,

2010-11-29  Andrew Cohen  <cohen@andy.bu.edu>

	* gnus-sum.el (gnus-summary-delete-article): If delete fails don't
	change the registry.

2010-11-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnir.el (nnir-run-gmane): Use mm-delete-duplicates instead of
	delete-dups that is not available in XEmacs 21.4.

	* mm-util.el (mm-delete-duplicates): Add comment.

2010-11-28  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-ignored-newsgroups): New variable.
	(nnir-get-active): Use it.

2010-11-28  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* proto-stream.el (proto-stream-open-network): Add some comments.

	* nntp.el (nntp-open-connection): Provide a :success condition.

	* nnimap.el (nnimap-open-connection-1): Ditto.

	* proto-stream.el (proto-stream-open-network): See what the response to
	the STARTTLS command is.

	* nnimap.el (nnimap-open-connection-1): Always upgrade to STARTTLS (for
	backwards compatibility).
	(nnimap-open-connection-1): Really respect nnimap-server-port.

	* proto-stream.el (proto-stream-open-network): When doing opportunistic
	TLS upgrades we don't really care about the identity of the peer.
	(proto-stream-open-network): Force starttls.el to use gnutls-cli, since
	that what we've checked for.
	(proto-stream-always-use-starttls): Only default to t if
	open-gnutls-stream exists.
	(proto-stream-open-network): If STARTTLS failed, then just open a
	normal connection.
	(proto-stream-open-network): Wait until the greeting before doing
	STARTTLS.
